# shogi-util

./: .gitignore  LICENSE  pyproject.toml
shogiutil/: usiwrapcli.py
